tests/neg/i4936b.scala
//> using options -Xfatal-warnings

final object Foo // error
